--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -22,9 +22,9 @@
           Loading...
         </div>
         <ul>
-          <li>This site is a reimplementation of the <a href="http://rgrjs.com"></a> site.</li>
-          <li>Find that project here <a target="_blank" href="https://github.com/RGRjs/rgrjs.com">Fork us</a></li>
-          <li>Watch how this site with node.js with <a target="_blank" href="https://www.pluralsight.com/courses/react-apps-with-relay-graphql-flux">this Pluralsight course</a></li>
+          <li>This is a reimplementation of the <a target="_blank" href="http://rgrjs.com/">rgrjs.com</a> site.</li>
+          <li>Find that project here <a target="_blank" href="https://github.com/RGRjs/rgrjs.com">Github</a></li>
+          <li>Watch how build this site with node.js at <a target="_blank" href="https://www.pluralsight.com/courses/react-apps-with-relay-graphql-flux">Pluralsight </a></li>
         </ul>
         <a href="https://github.com/RGRjs/rgrjs.com" class="hide-on-small-only"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
       </div>
