--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -3,8 +3,7 @@
     var div = document.getElementById('root');
     var main = Elm.embed(Elm.Main, div);
 
-    main.ports.increment.subscribe(function() {
-      console.log("model change");
+    main.ports.closeModal.subscribe(function() {
       $('#modal1').closeModal();
     });
 
